--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>hello beautiful</title>
+	<title>spell together</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#00FDBC" />
 	<link rel="shortcut icon" type="image/svg" href="/favicon.svg" />
