--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<meta name="theme-color" content="#00FDBC" />
 	<link rel="shortcut icon" type="image/svg" href="/favicon.svg" />
 	<link rel="stylesheet" href="/src/styles/global.css" />
+	<link rel="mask-icon" href="/favicon.svg" color="#00FDBC">
+	<link rel="apple-touch-icon" href="/favicon.svg" sizes="180x180">
+
+	<meta property="og:title" content="Spelltogether" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://spell.galaxy.observer" />
+	<meta property="og:image" content="https://spell.galaxy.observer/favicon.svg" />
 </head>
+
 
 <body>
 	<div id="app">
