--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Spelltogether" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://spell.galaxy.observer" />
-	<meta property="og:image" content="https://spell.galaxy.observer/favicon.svg" />
+	<meta property="og:image" content="https://spell.galaxy.observer/og.png" />
 </head>
 
 
