--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 	<link rel="mask-icon" href="/favicon.svg" color="#00FDBC">
 	<link rel="apple-touch-icon" href="/favicon.svg" sizes="180x180">
 
-	<meta property="og:title" content="Spelltogether" />
+	<title>spelltogether</title>
+	<meta name="description" content="friends who spell together" />
+
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="spell together" />
+	<meta name="twitter:description" content="friends who spell together" />
+	<meta name="twitter:image" content="https://spell.galaxy.observer/og.png" />
+
+	<meta property="og:title" content="spelltogether" />
+	<meta property="og:description" content="friends who spell together" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://spell.galaxy.observer" />
 	<meta property="og:image" content="https://spell.galaxy.observer/og.png" />
 </head>
 
