--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>spell together</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta name="theme-color" content="#00FDBC" />
 	<link rel="shortcut icon" type="image/svg" href="/favicon.svg" />
 	<link rel="stylesheet" href="/src/styles/global.css" />
