--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" type="image/svg" href="/favicon.svg" />
 	<link rel="stylesheet" href="/src/styles/global.css" />
 	<link rel="mask-icon" href="/favicon.svg" color="#00FDBC">
-	<link rel="apple-touch-icon" href="/favicon.svg" sizes="180x180">
+	<link rel="apple-touch-icon" href="/spelltogether.png" sizes="180x180">
 
 	<title>spelltogether</title>
 	<meta name="description" content="friends who spell together" />
