--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 	<script>
 		// disable double tap to zoom on mobile
 		window.addEventListener('touchstart', function (event) {
-			if (event.touches.length > 1) {
-				event.preventDefault();
-			}
-		}, { passive: false });
-		let lastTouchEnd = 0;
-		document.addEventListener('touchend', function (event) {
-			const now = (new Date()).getTime();
-			if (now - lastTouchEnd <= 300) {
-				event.preventDefault();
-			}
-			lastTouchEnd = now;
-		}, false);
+			var t2 = e.timeStamp;
+			var t1 = e.currentTarget.dataset.lastTouch || t2;
+			var dt = t2 - t1;
+			var fingers = e.touches.length;
+			e.currentTarget.dataset.lastTouch = t2;
+
+			if (!dt || dt > 500 || fingers > 1) return; // not double-tap
+
+			e.preventDefault();
+			e.target.click();
+		});
 	</script>
 </head>
 
